# vla

./: .gitignore  .gitmodules  K-프로젝트_결과보고서_PPT목차_및_스크립트.md  README.md  RoboVLMs_분석.md  TEAM_GUIDE.md  WEEKLY_TODO.md
Model_ws/src/vla_node/: package.xml  setup.py
Model_ws/src/vla_node/vla_node/: simple_inference.py
ROS_action/: Readme.md
ROS_action/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS_action/install/audio_capture_package/share/audio_capture_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS_action/log/: latest_build
ROS_action/src/action_executor_node/: setup.cfg  setup.py
ROS_action/src/audio_capture_package/: package.xml  setup.cfg  setup.py
ROS_action/src/camera_pub/: Readme.md  package.xml  setup.cfg  setup.py
ROS_action/src/camera_sub/: setup.py
ROS_action/src/custom_msgs/: CMakeLists.txt  package.xml
ROS_action/src/mic_pub/: package.xml  setup.cfg  setup.py
ROS_action/src/my_test_pkg/: package.xml  setup.py
ROS_action/src/object_pose/: Readme.md  package.xml  setup.cfg  setup.py
ROS_action/src/omni_controller/: Readme.md  package.xml  setup.cfg  setup.py
ROS_action/src/ros_action_msgs/: CMakeLists.txt  package.xml
ROS_action/src/vla_node/: CMakeLists.txt.old  setup.cfg  setup.py
serbot_ws/install/: local_setup.sh  setup.sh
serbot_ws/log/: latest_build
serbot_ws/src/serbot2_stt/: setup.cfg  setup.py
whisper2/: Dockerfile  README.md  whisper_test.py
whisper2/install/: local_setup.sh  setup.sh
whisper2/log/: latest_build
(+99 files in other folders)
