<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<<<<<<<< HEAD:ROS_action/src/audio_capture_package/package.xml
  <name>audio_capture_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="soda@example.com">soda</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
========
  <name>object_pose</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shosae@todo.todo">shosae</maintainer>
  <license>TODO: License declaration</license>
>>>>>>>> c19ab1f4b042e19fa6f37610f39b39b4b1546d4f:ROS_action/src/object_pose/package.xml

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>ROS_action_msgs</depend>

  <export>  
    <build_type>ament_python</build_type>
  </export>
</package>
